--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>basic_code_Serial</name>
+	<name>twelite_basicio_dev</name>
 	<comment></comment>
 	<projects>
 	</projects>
