--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "sprintf.h": "c",
-        "type_traits": "c"
+        "type_traits": "c",
+        "basicio.h": "c"
     },
     "files.autoGuessEncoding": true
 }
